--- a/extra-tests/classes/RollupCurrencyInfoTests.cls
+++ b/extra-tests/classes/RollupCurrencyInfoTests.cls
@@ -17,7 +17,7 @@ private class RollupCurrencyInfoTests {
     RollupCurrencyInfo.transform(new List<SObject>{ opp }, Opportunity.Amount, mockEurInfo.IsoCode, new List<RollupOrderBy__mdt>());
 
     opp = (Opportunity) RollupCurrencyInfo.getCalcItem(opp, mockEurInfo.IsoCode);
-    System.assertEquals(0, opp.Amount, 'Should make it here without divide by zero error!');
+    Assert.areEqual(0, opp.Amount, 'Should make it here without divide by zero error!');
   }
 
   @IsTest
@@ -38,7 +38,7 @@ private class RollupCurrencyInfoTests {
     RollupCurrencyInfo.transform(new List<SObject>{ opp }, Opportunity.Amount, 'EUR', new List<RollupOrderBy__mdt>());
 
     opp = (Opportunity) RollupCurrencyInfo.getCalcItem(opp, 'EUR');
-    System.assertEquals(null, opp.Amount, 'Should make it here without NPE!');
+    Assert.areEqual(null, opp.Amount, 'Should make it here without NPE!');
   }
 
   @IsTest
@@ -71,17 +71,17 @@ private class RollupCurrencyInfoTests {
     RollupCurrencyInfo.transform(new List<SObject>{ camp }, Campaign.BudgetedCost, mockEurInfo.IsoCode, new List<RollupOrderBy__mdt>());
 
     Campaign updatedCamp = (Campaign) RollupCurrencyInfo.getCalcItem(camp, mockEurInfo.IsoCode);
-    System.assertEquals(mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / camp.BudgetedCost), updatedCamp.BudgetedCost);
+    Assert.areEqual(mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / camp.BudgetedCost), updatedCamp.BudgetedCost);
 
     // now for the second field update
     RollupCurrencyInfo.transform(new List<SObject>{ camp }, Campaign.ActualCost, mockEurInfo.IsoCode, new List<RollupOrderBy__mdt>());
     updatedCamp = (Campaign) RollupCurrencyInfo.getCalcItem(camp, mockEurInfo.IsoCode);
-    System.assertEquals((mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / camp.ActualCost)).doubleValue(), updatedCamp.ActualCost);
+    Assert.areEqual((mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / camp.ActualCost)).doubleValue(), updatedCamp.ActualCost);
     // sanity check that updates on previously transformed fields still calculate correctly
     camp.BudgetedCost = 6;
     RollupCurrencyInfo.transform(new List<SObject>{ camp }, Campaign.BudgetedCost, mockEurInfo.IsoCode, new List<RollupOrderBy__mdt>());
     Campaign again = (Campaign) RollupCurrencyInfo.getCalcItem(camp, mockEurInfo.IsoCode);
-    System.assertEquals((mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / camp.BudgetedCost)).doubleValue(), again.BudgetedCost);
+    Assert.areEqual((mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / camp.BudgetedCost)).doubleValue(), again.BudgetedCost);
   }
 
   @IsTest
@@ -105,7 +105,7 @@ private class RollupCurrencyInfoTests {
     RollupCurrencyInfo.transform(new List<SObject>{ opp }, currencyFormulaToken, mockEurInfo.IsoCode, new List<RollupOrderBy__mdt>());
 
     Opportunity updatedOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(opp, mockEurInfo.IsoCode);
-    System.assertEquals((mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / opp.AmountFormula__c)).doubleValue(), updatedOpp.AmountFormula__c);
+    Assert.areEqual((mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / opp.AmountFormula__c)).doubleValue(), updatedOpp.AmountFormula__c);
   }
 
   @IsTest
@@ -153,8 +153,11 @@ private class RollupCurrencyInfoTests {
 
     firstOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(opps.get(0), eurPeriodOne.IsoCode);
     secondOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(opps.get(1), eurPeriodOne.IsoCode);
-    System.assertEquals(eurPeriodOne.ConversionRate / (usdInfo.ConversionRate / opps[0].Amount), firstOpp.Amount);
-    System.assertEquals(eurPeriodTwo.ConversionRate / (usdInfo.ConversionRate / opps[1].Amount), secondOpp.Amount);
+    Assert.areEqual(eurPeriodOne.ConversionRate / (usdInfo.ConversionRate / opps[0].Amount), firstOpp.Amount);
+    Assert.areEqual(eurPeriodTwo.ConversionRate / (usdInfo.ConversionRate / opps[1].Amount), secondOpp.Amount);
+
+    Assert.areEqual(Date.newInstance(9999, 12, 31), RollupCurrencyInfo.REPOSITORY.args.bindVars.get('maxStartDate'));
+    Assert.areEqual(Date.newInstance(0, 12, 30), RollupCurrencyInfo.REPOSITORY.args.bindVars.get('minStartDate'));
   }
 
   @IsTest
@@ -183,8 +186,8 @@ private class RollupCurrencyInfoTests {
     eurPeriodTwo.NextStartDate = System.today().addDays(1);
 
     RollupCurrencyInfo unusedStandardEurPeriod = new RollupCurrencyInfo();
-    eurPeriodTwo.ConversionRate = 1.5;
-    eurPeriodTwo.IsoCode = 'EUR';
+    unusedStandardEurPeriod.ConversionRate = 1;
+    unusedStandardEurPeriod.IsoCode = 'EUR';
 
     RollupCurrencyInfo.mockBasicCurrencies = new List<RollupCurrencyInfo>{ unusedStandardEurPeriod };
     RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ usdInfo, eurPeriodOne, eurPeriodTwo };
@@ -203,7 +206,7 @@ private class RollupCurrencyInfoTests {
     RollupCurrencyInfo.transform(olis, OpportunityLineItem.TotalPrice, eurPeriodOne.IsoCode, new List<RollupOrderBy__mdt>());
 
     OpportunityLineItem oli = (OpportunityLineItem) RollupCurrencyInfo.getCalcItem(oliToUpdate, eurPeriodOne.IsoCode);
-    System.assertEquals(eurPeriodOne.ConversionRate / (usdInfo.ConversionRate / oliToUpdate.TotalPrice), oli.TotalPrice);
+    Assert.areEqual(eurPeriodOne.ConversionRate / (usdInfo.ConversionRate / oliToUpdate.TotalPrice), oli.TotalPrice);
   }
 
   @IsTest
@@ -219,18 +222,19 @@ private class RollupCurrencyInfoTests {
     usdInfo.StartDate = Date.newInstance(0, 12, 30);
     usdInfo.NextStartDate = Date.newInstance(9999, 12, 31);
     RollupCurrencyInfo eurPeriodOne = new RollupCurrencyInfo();
-    eurPeriodOne.ConversionRate = 1.1;
+    eurPeriodOne.ConversionRate = 2;
     eurPeriodOne.IsoCode = 'EUR';
     eurPeriodOne.StartDate = System.today().addDays(-10);
     eurPeriodOne.NextStartDate = System.today().addDays(-5);
     RollupCurrencyInfo eurPeriodTwo = new RollupCurrencyInfo();
-    eurPeriodTwo.ConversionRate = 1.2;
+    eurPeriodTwo.ConversionRate = 1;
     eurPeriodTwo.IsoCode = 'EUR';
     eurPeriodTwo.StartDate = Date.newInstance(0, 12, 30);
-    eurPeriodTwo.NextStartDate = System.today().addDays(-10);
-    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ usdInfo, eurPeriodOne };
-    Opportunity opp = new Opportunity(StageName = 'a', CloseDate = System.today().addDays(-7), Name = 'One', Amount = 14);
-    Opportunity secondOpp = new Opportunity(StageName = 'a', CloseDate = System.today().addYears(-7), Name = 'One', Amount = 14);
+    eurPeriodTwo.NextStartDate = eurPeriodOne.StartDate;
+    RollupCurrencyInfo.mockBasicCurrencies = new List<RollupCurrencyInfo>{ usdInfo };
+    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ eurPeriodOne };
+    Opportunity opp = new Opportunity(StageName = 'a', CloseDate = eurPeriodOne.StartDate.addDays(2), Name = 'One', Amount = 10);
+    Opportunity secondOpp = new Opportunity(StageName = 'b', CloseDate = eurPeriodOne.StartDate.addYears(-7), Name = 'Two', Amount = 10);
     insert new List<Opportunity>{ opp, secondOpp };
     opp = (Opportunity) RollupTestUtils.queryRecord(opp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
     secondOpp = (Opportunity) RollupTestUtils.queryRecord(secondOpp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
@@ -238,11 +242,74 @@ private class RollupCurrencyInfoTests {
     RollupCurrencyInfo.transform(new List<Opportunity>{ opp }, Opportunity.Amount, eurPeriodOne.IsoCode, new List<RollupOrderBy__mdt>());
 
     opp = (Opportunity) RollupCurrencyInfo.getCalcItem(opp, eurPeriodOne.IsoCode);
-    System.assertEquals(15.4, opp.Amount);
+    Assert.areEqual(20, opp.Amount);
 
-    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ usdInfo, eurPeriodOne, eurPeriodTwo };
+    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ eurPeriodOne, eurPeriodTwo };
     RollupCurrencyInfo.transform(new List<Opportunity>{ secondOpp }, Opportunity.Amount, eurPeriodOne.IsoCode, new List<RollupOrderBy__mdt>());
     secondOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(secondOpp, eurPeriodOne.IsoCode);
-    System.assertEquals(16.8, secondOpp.Amount);
+    Assert.areEqual(10, secondOpp.Amount);
+  }
+
+  @IsTest
+  static void multipleDateRangesContinueToWork() {
+    if (RollupCurrencyInfo.isMultiCurrency() == false) {
+      return;
+    }
+
+    RollupCurrencyInfo usdInfo = new RollupCurrencyInfo();
+    usdInfo.ConversionRate = 1;
+    usdInfo.IsoCode = 'USD';
+    // default dated currency range - all time
+    usdInfo.StartDate = Date.newInstance(0, 12, 30);
+    usdInfo.NextStartDate = Date.newInstance(9999, 12, 31);
+    RollupCurrencyInfo.mockBasicCurrencies = new List<RollupCurrencyInfo>{ usdInfo };
+
+    RollupCurrencyInfo eurPeriodOne = new RollupCurrencyInfo();
+    eurPeriodOne.ConversionRate = 1;
+    eurPeriodOne.IsoCode = 'EUR';
+    eurPeriodOne.StartDate = usdInfo.StartDate;
+    eurPeriodOne.NextStartDate = System.today().addYears(-10);
+    RollupCurrencyInfo eurPeriodTwo = new RollupCurrencyInfo();
+    eurPeriodTwo.ConversionRate = 2;
+    eurPeriodTwo.IsoCode = 'EUR';
+    eurPeriodTwo.StartDate = eurPeriodOne.NextStartDate;
+    eurPeriodTwo.NextStartDate = eurPeriodTwo.StartDate.addYears(3);
+    RollupCurrencyInfo eurPeriodThree = new RollupCurrencyInfo();
+    eurPeriodThree.ConversionRate = 3;
+    eurPeriodThree.IsoCode = 'EUR';
+    eurPeriodThree.StartDate = eurPeriodTwo.NextStartDate;
+    eurPeriodThree.NextStartDate = eurPeriodThree.StartDate.addYears(3);
+    RollupCurrencyInfo eurPeriodFour = new RollupCurrencyInfo();
+    eurPeriodFour.ConversionRate = 4;
+    eurPeriodFour.IsoCode = 'EUR';
+    eurPeriodFour.StartDate = eurPeriodThree.NextStartDate;
+    eurPeriodFour.NextStartDate = System.today().addYears(10);
+    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ eurPeriodOne, eurPeriodTwo, eurPeriodThree, eurPeriodFour };
+
+    Opportunity opp = new Opportunity(StageName = 'a', CloseDate = eurPeriodOne.NextStartDate.addDays(-2), Name = 'One', Amount = 10);
+    Opportunity secondOpp = new Opportunity(StageName = 'b', CloseDate = eurPeriodTwo.StartDate.addDays(1), Name = 'Two', Amount = 10);
+    Opportunity thirdOpp = new Opportunity(StageName = 'c', CloseDate = eurPeriodThree.StartDate.addDays(1), Name = 'Three', Amount = 10);
+    Opportunity fourthOpp = new Opportunity(StageName = 'd', CloseDate = eurPeriodFour.StartDate.addDays(1), Name = 'Four', Amount = 10);
+    insert new List<Opportunity>{ opp, secondOpp, thirdOpp, fourthOpp };
+    opp = (Opportunity) RollupTestUtils.queryRecord(opp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+    secondOpp = (Opportunity) RollupTestUtils.queryRecord(secondOpp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+    thirdOpp = (Opportunity) RollupTestUtils.queryRecord(thirdOpp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+    fourthOpp = (Opportunity) RollupTestUtils.queryRecord(fourthOpp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+
+    RollupCurrencyInfo.transform(
+      new List<Opportunity>{ opp, secondOpp, thirdOpp, fourthOpp },
+      Opportunity.Amount,
+      eurPeriodOne.IsoCode,
+      new List<RollupOrderBy__mdt>()
+    );
+
+    opp = (Opportunity) RollupCurrencyInfo.getCalcItem(opp, eurPeriodOne.IsoCode);
+    Assert.areEqual(10, opp.Amount);
+    secondOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(secondOpp, eurPeriodOne.IsoCode);
+    Assert.areEqual(20, secondOpp.Amount);
+    thirdOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(thirdOpp, eurPeriodOne.IsoCode);
+    Assert.areEqual(30, thirdOpp.Amount);
+    fourthOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(fourthOpp, eurPeriodOne.IsoCode);
+    Assert.areEqual(40, fourthOpp.Amount);
   }
 }
