Fixes an issue reported in #662 where the full recalc app would report a job as having completed before it actually had

--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -67,7 +67,9 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
     }
 
     this.calcItems = this.retriever.fetch();
-    return super.startAsyncWork();
+    String jobId = super.startAsyncWork();
+    insert new RollupState__c(RelatedJobId__c = jobId);
+    return jobId;
   }
 
   private String runBatch() {
