--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -51,6 +51,7 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
     return RollupFullBatchRecalculator.class.getName();
   }
 
+  @SuppressWarnings('PMD.ApexCRUDViolation')
   protected virtual override String startAsyncWork() {
     if (this.finalizer != null) {
       while (this.cabooses.isEmpty() == false) {
