Fixes #680 by only fetching mock metadata for RollupTests.shouldNotDoubleCountOnDecrementForMatches

--- a/extra-tests/classes/RollupTests.cls
+++ b/extra-tests/classes/RollupTests.cls
@@ -533,6 +533,7 @@ private class RollupTests {
     };
 
     RollupTestUtils.DMLMock mock = RollupTestUtils.loadMock(new List<Opportunity>{ opp });
+    Rollup.onlyUseMockMetadata = true;
     Rollup.rollupMetadata = new List<Rollup__mdt>{
       new Rollup__mdt(
         RollupFieldOnCalcItem__c = 'Amount',
