Adds cursor ignore file and removes a piece of duplicated logic when full recalculations are being detected

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -2305,12 +2305,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       wrappedMeta.recordCount < parentResetProcessor.rollupControl.MaxLookupRowsBeforeBatching__c;
     if (wrappedMeta.recordCount == 0 && wrappedMeta.metadata.isEmpty() == false && isFullRecalcApp && control.ShouldSkipResettingParentFields__c == false) {
       return parentResetProcessor;
-    } else if (
-      (invokePoint != InvocationPoint.FROM_FULL_RECALC_LWC &&
-      invokePoint != InvocationPoint.FROM_FULL_RECALC_FLOW) ||
-      control.ShouldSkipResettingParentFields__c ||
-      wrappedMeta.recordIds.isEmpty() == false
-    ) {
+    } else if ((isFullRecalcApp) || control.ShouldSkipResettingParentFields__c || wrappedMeta.recordIds.isEmpty() == false) {
       parentResetProcessor = null;
     }
 
